third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/zeroable/not_all_fields_zeroable.rs
extern crate pin_init;
use pin_init::*;

#[derive(Zeroable)]
struct Foo {
    a: usize,
    b: &'static Foo,
}

fn main() {}
