third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/zeroable/not_all_fields_zeroable.stderr
error[E0277]: the trait bound `&'static Foo: pin_init::Zeroable` is not satisfied
 --> tests/ui/compile-fail/zeroable/not_all_fields_zeroable.rs:7:8
  |
7 |     b: &'static Foo,
  |        ^^^^^^^^^^^^ the trait `pin_init::Zeroable` is not implemented for `&'static Foo`
  |
note: required by a bound in `assert_zeroable`
 --> tests/ui/compile-fail/zeroable/not_all_fields_zeroable.rs:4:10
  |
4 | #[derive(Zeroable)]
  |          ^^^^^^^^ required by this bound in `assert_zeroable`
  = note: this error originates in the derive macro `Zeroable` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider removing the leading `&`-reference
  |
7 -     b: &'static Foo,
7 +     b: Foo,
  |
